src/objects/Travel__c.object
<CustomObject>
    <description>when travel needs to be arranged this object will hold travel info</description>
    <fields>
        <fullName>Airfare_Coordination_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Airfare Coordination Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booking_Status__c</fullName>
        <label>Booking Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Booked</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Booked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Companion__c</fullName>
        <label>Companion</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Travels</relationshipLabel>
        <relationshipName>Travels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extra_Local_Concier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Local Concier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ground_Transportation_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ground Transportation Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotel_Coordination_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hotel Coordination Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Itinerary_Summary__c</fullName>
        <label>Itinerary Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Hospital_Nights__c</fullName>
        <label>Number of Hospital Nights</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Travels</relationshipLabel>
        <relationshipName>Travels_Oppty</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Passport_Status__c</fullName>
        <label>Passport Status</label>
        <picklist>
            <picklistValues>
                <fullName>Info Given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Already Obtained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_Op_Instructions__c</fullName>
        <label>Pre-Op Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Op__c</fullName>
        <label>Pre-Op</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Procedure_Date__c</fullName>
        <label>Procedure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Special_Passport_Visa__c</fullName>
        <label>Special Passport/Visa</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Travel_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_End__c</fullName>
        <label>Travel End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Travel_Start__c</fullName>
        <label>Travel Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Visa_Status__c</fullName>
        <label>Visa Status</label>
        <picklist>
            <picklistValues>
                <fullName>Info Given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Already Obtained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wheel_Chair_Bound__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wheel Chair Bound</label>
        <type>Checkbox</type>
    </fields>
    <label>Travel</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Travel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>